# MxDNA

./: .gitignore  BasicUnitNMS.cpp  CMakeLists.txt  README.md  demo.py  mxdna.py
model_source/: configuration_mxdna.py  modeling_mxdna.py
model_source/1mertokenizer/: tokenizer_config.json  vocab.txt
model_source/config/: config.json
model_source/kernel/: BasicUnitNMS.cpp
